# ai-narrative

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  proposal.md  pyproject.toml  requirements.txt  test_output.md  Нарративный проект.docx
docs/: WEB.md  adult_only_grok-4.3.md  adult_only_output.md  model_eval.md  nsfw_model_research.md  test_output.md
scripts/: e2e_test.py  eval_nsfw.py  real_run.py  run.py  run_adult.py  serve_mock.py  test_adult_model.py  test_flow.py  test_one_chapter.py
server/: app.py
src/narrative/: __init__.py  claude_sub.py  config.py  graph.py  gtrans.py  live.py  llm.py  nodes.py  prompts.py  routing.py  state.py  util.py
web/: .dockerignore  .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts
