[project]
name = "ai-narrative"
version = "0.1.0"
description = "Конвейер ботов генерации визуальных новелл 18+ на LangGraph (OpenRouter + Claude, адалт через модель без цензуры)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narrative"]

[tool.setuptools]
package-dir = {"" = "src"}
